@@ -9,6 +9,10 @@ the rules for this file:
 
 ------------------------------------------------------------------------------
 
+2010-Feb-23 Tilmann Zaschke
+		* Fixed drawstuff problem with ATI 10.1 and 10.2 driver under Linux:
+		  Bug ID: 2957098
+
 2010-Feb-03 Tilmann Zaschke
 		* Release of ode4j-0.11.1-j1.2
 		   ******************************************************************
